[gd_scene load_steps=11 format=2]

[ext_resource path="res://Level/Level.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]
[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.41, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 354.5 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 2.0
margin_right = 1277.0
margin_bottom = 719.0
color = Color( 0.223529, 0.25098, 0.34902, 1 )

[node name="PlayerScore" type="Label" parent="."]
margin_left = 370.0
margin_top = 51.0
margin_right = 409.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Score"

[node name="OpponentScore" type="Label" parent="."]
margin_left = 885.0
margin_top = 51.0
margin_right = 925.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Score"

[node name="Countdown" type="Label" parent="."]
visible = false
margin_left = 625.0
margin_top = 198.0
margin_right = 664.0
margin_bottom = 258.0
custom_colors/font_color = Color( 0.952941, 0.313726, 0.160784, 1 )
custom_fonts/font = SubResource( 3 )
text = "2"

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 69, 358 )

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2( 873, -12 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( -233, 0 )
scale = Vector2( 100, 1 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 876, 731 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( -233, 0 )
scale = Vector2( 100, 1 )
shape = SubResource( 1 )

[node name="Opponent" parent="." instance=ExtResource( 4 )]
position = Vector2( 1192, 349 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )

[node name="WallLeft" type="Area2D" parent="."]
position = Vector2( -6, -11 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( -24, 370 )
shape = SubResource( 2 )

[node name="WallRight" type="Area2D" parent="."]
position = Vector2( 1, 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 1306, 358.5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="GUI" parent="." instance=ExtResource( 7 )]
layer = 2

[connection signal="body_entered" from="WallLeft" to="." method="_on_WallLeft_body_entered"]
[connection signal="body_entered" from="WallRight" to="." method="_on_WallRight_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
